fix: 🐛 Overflow Bug

--- a/src/components/DataRoom/USDCStorage/styles.module.css
+++ b/src/components/DataRoom/USDCStorage/styles.module.css
@@ -9,6 +9,7 @@
   align-items: center;
   position: sticky;
   top: 0;
+  overflow: hidden;
 }
 
 .content {
